--- a/package.json
+++ b/package.json
@@ -14,14 +14,15 @@
     "@emotion/styled": "^11.14.1",
     "@hookform/resolvers": "^5.2.2",
     "i18next": "^25.5.2",
+    "jwt-decode": "^4.0.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.63.0",
+    "react-hot-toast": "^2.6.0",
     "react-i18next": "^16.0.0",
     "react-router-dom": "^7.9.3",
     "zod": "^4.1.11",
-    "zustand": "^5.0.8",
-    "jwt-decode": "^4.0.0"
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
